--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1055,6 +1055,88 @@ input, select, textarea {
 
 		}
 
+                @media only screen and (max-width:600px) {
+			.links {
+			  display: none;
+			}
+			.icons {
+			  display: flex;
+			}
+			.nav-toggle {
+			  display: block:
+			  position: absolute:
+		          top: 10px;
+			  right: 10px;
+			  z-index: 1;
+			  background-color: transparent;
+			  border: none;
+			  cursor: pointer;
+			  outline: none;
+			}
+			.menu-icon {
+			   display: block;
+			   width: 20px;
+			   height: 3px;
+			   margin-bottom: 3px;
+			   position: relative;
+			   background-color: #000;
+			   border-radius: 2px;
+			   z-index: 2;
+			}
+			.menu-icon:before,
+			.menu-icon:after {
+			  content: '';
+			  display: block;
+			  width: 20px;
+			  height: 3px;
+			  position: absolute;
+			  background-color: #000;
+			  border-radius: 2px;
+			  z-index: 2;
+			}
+			.menu-icon:before {
+			  top: -6px:
+			}
+			.menu-icon:after {
+			  bottom: -6px;
+			}.show-links .menu-icon {
+			   background-color: transparent;
+			}
+			.show-links .menu-icon:before {
+			  transform: rotate(45deg);
+			  bottom: 0;
+			}
+			.show-links .links {
+			  display: block;
+			  position: absolute;
+			  top: 100%;
+			  left: 0%;
+			  width: 100%;
+			  background-color: #fff;
+			  z-index: 1;
+			  padding: 10px;
+			  box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+			}
+			.show-links .links li {
+			  display: block;
+			  margin-bottom: 10px;
+			}
+			.show-links .icons {
+			  display: none;
+			}
+                }
+                @media only screen and (min-width: 601px) {
+			.links {
+			  display: flex;
+			}
+			.icons {
+			  display: none;
+			}
+			.nav-toggle {
+			   display: none;
+			}
+                 }
+
 		@media screen and (max-width: 980px) {
 
 			.row {
