--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1054,106 +1054,104 @@ input, select, textarea {
 						}
 
 		}
-                 @media only screen and (max-width:600px) {
-			.menu-toggle {
-			  display: block;
-			}	
-			.links {
-			  display: none;
-			}
-			.links.show {
-			  display: block;
-			  position: absolute;
-			  top: 60px;
-			  left: 0;
-			  width: 100%;
-			  background-color: #fff;
-			  padding: 10px;
-			  border-bottom: 1px solid #ccc;
-			}
-			.links.show li {
-			  display: block;
-			  margin-bottom: 10px;
-			}
-               }
-			.icons {
-			  display: flex;
-			}
-			.nav-toggle {
-			  display: block:
-			  position: absolute:
-		          top: 10px;
-			  right: 10px;
-			  z-index: 1;
-			  background-color: transparent;
-			  border: none;
-			  cursor: pointer;
-			  outline: none;
-			}
-			.menu-icon {
-			   display: block;
-			   width: 20px;
-			   height: 3px;
-			   margin-bottom: 3px;
-			   position: relative;
-			   background-color: #000;
-			   border-radius: 2px;
-			   z-index: 2;
-			}
-			.menu-icon:before,
-			.menu-icon:after {
-			  content: '';
-			  display: block;
-			  width: 20px;
-			  height: 3px;
-			  position: absolute;
-			  background-color: #000;
-			  border-radius: 2px;
-			  z-index: 2;
-			}
-			.menu-icon:before {
-			  top: -6px:
-			}
-			.menu-icon:after {
-			  bottom: -6px;
-			}.show-links .menu-icon {
-			   background-color: transparent;
-			}
-			.show-links .menu-icon:before {
-			  transform: rotate(45deg);
-			  bottom: 0;
-			}
-			.show-links .links {
-			  display: block;
-			  position: absolute;
-			  top: 100%;
-			  left: 0%;
-			  width: 100%;
-			  background-color: #fff;
-			  z-index: 1;
-			  padding: 10px;
-			  box-shadow: 0 2px 5px rgba(0,0,0,0.2);
-			}
-			.show-links .links li {
-			  display: block;
-			  margin-bottom: 10px;
-			}
-			.show-links .icons {
-			  display: none;
-			}
+                 
+                @media only screen and (max-width: 600px) {
+               /* Hide the links list and show the icons list on small screens */
+                .links {
+                  display: none;
                 }
-                @media only screen and (min-width: 601px) {
-			.links {
-			  display: flex;
-			}
-			.icons {
-			  display: none;
-			}
-			.nav-toggle {
-			   display: none;
-			}
-                 }
+                .icons {
+                  display: flex;
+                }
+                /* Show the navigation toggle button */
+                .nav-toggle {
+                  display: block;
+                  position: absolute;
+                  top: 10px;
+                  right: 10px;
+                  z-index: 1;
+                  background-color: transparent;
+                  border: none;
+                  cursor: pointer;
+                  outline: none;
+                }
+                .menu-icon {
+                  display: block;
+                  width: 20px;
+                  height: 3px;
+                  margin-bottom: 3px;
+                  position: relative;
+                  background-color: #000;
+                  border-radius: 2px;
+                  z-index: 2;
+                }
+                .menu-icon:before,
+                .menu-icon:after {
+                  content: '';
+                  display: block;
+                  width: 20px;
+                  height: 3px;
+                  position: absolute;
+                  background-color: #000;
+                  border-radius: 2px;
+                  z-index: 2;
+                }
+                .menu-icon:before {
+                  top: -6px;
+                }
+                .menu-icon:after {
+                  bottom: -6px;
+                }
+                .show-links .menu-icon {
+                  background-color: transparent;
+                }
+                .show-links .menu-icon:before {
+                  transform: rotate(45deg);
+                  top: 0;
+                }
+                .show-links .menu-icon:after {
+                  transform: rotate(-45deg);
+                  bottom: 0;
+                }
+                /* Add styles for the drop-down menu */
+                .show-links .links {
+                  display: block;
+                  position: absolute;
+                  top: 100%;
+                  left: 0;
+                  width: 100%;
+                  background-color: #fff;
+                  z-index: 1;
+                  padding: 10px;
+                  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+                  /* Change the display property to flex */
+                  display: flex;
+                  flex-direction: column;
+                }
+                .show-links .links li {
+                  display: block;
+                  margin-bottom: 10px;
+                  /* Add padding to make the links more clickable */
+                  padding: 5px;
+                }
+                .show-links .icons {
+                  display: none;
+                }
+             }
 
+                @media only screen and (min-width: 601px) {
+                /* Show the links list and hide the icons list on larger screens */
+                .links {
+                  display: flex;
+                }
+                .icons {
+                  display: none;
+                }
+                /* Hide the navigation toggle button */
+                .nav-toggle {
+                  display: none;
+                }
+             }
 
 
                 
